chore(add-home-navigation):add home navigation to my files [Finishes #167375888]

--- a/UI/admin-create-trip.html
+++ b/UI/admin-create-trip.html
@@ -14,16 +14,9 @@
             <div class="left">
                 <a href="javascript:void(0)" class="openfilters" onclick="openFiltersMenu()">Filters</a> 
             </div>
-            <div class="right">
-                <a href="">Logout</a>
-            </div>
-        </div>
-        <div id="filters" class="filters">
-             <div class="nav">
-                    <div class="close-filter">
-                        <a href="javascript:void(0)" class="closebtn" onclick="closeFiltersMenu()">&times;</a>
-                    </div>
-            </div>
+            <div class="nav1">
+                    <a href="./landing-page.html">Way Farer</a>
+                </div>
         </div>
         <div class="main">
                 <div class="main-left">
@@ -60,10 +53,10 @@
                                                 <option value="place">Juba</option>
                                                 <option value="place">Gitega</option>
                                             </select>
-                                       </div> <br>
-                                       <div class="form-group">
+                                            </div> <br>
+                                        <div class="form-group">
                                             <label for="make" class="control-label">TO</label>
-                                            <select id="picking-station" onchange="getPickupstation()">
+                                             <select id="picking-station" onchange="getPickupstation()">
                                                 <option value="Select"></option>
                                                 <option value="place">Nairobi</option>
                                                 <option value="place">Kigali</option>
