--- a/UI/assets/trips/id-102001.html
+++ b/UI/assets/trips/id-102001.html
@@ -7,6 +7,6 @@
     <span>DEPARTURE TIME: 0400</span> <br>
     <span>ARRIVAL TIME: 2400</span> <br>
     <button class="dlt" type="submit" id="delete"><a href="../../admin-cancel-trip.html">Cancel Trip</a> </button>
-    <button class="dlt" type="submit" id="bookings"> View Bookings</button>
+    <button class="dlt" type="submit" id="bookings"><a href="../../bookings.html">View Bookings</a></button>
     <button class="dlt" type="submit" id="back"> <a href="../../../UI/view-all-trips.html"> Back</a></button> <br><br> <br>
 </div>
