--- a/UI/signup.html
+++ b/UI/signup.html
@@ -9,12 +9,8 @@
     </head>
 <body>
      <div class="container">
-        <div class="header">
-            
-        </div>
       <div class="main">
-            <h2>Way Farer</h2>
-
+            <h2><a href="./landing-page.html">Way Farer</a></h2>
         <div class="form-instruction">
             <h3>Create an account</h3> <br><br>
         </div>
