--- a/UI/view-all-trips.html
+++ b/UI/view-all-trips.html
@@ -14,16 +14,9 @@
             <div class="left">
                 <a href="javascript:void(0)" class="openfilters" onclick="openFiltersMenu()">Filters</a> 
             </div>
-            <div class="right">
-                <a href="">Logout</a>
-            </div>
-        </div>
-        <div id="filters" class="filters">
-             <div class="nav">
-                    <div class="close-filter">
-                        <a href="javascript:void(0)" class="closebtn" onclick="closeFiltersMenu()">&times;</a>
-                    </div>
-            </div>
+            <div class="nav1">
+                    <a href="./landing-page.html">Way Farer</a>
+                </div>
         </div>
         <div class="main">
                 <div class="main-left">
