--- a/UI/assets/trips/id-102003.html
+++ b/UI/assets/trips/id-102003.html
@@ -6,6 +6,6 @@
     <span>DEPARTURE TIME: 0000</span> <br>
     <span>ARRIVAL TIME: 0800</span> <br>
     <button class="dlt" type="submit" id="delete"><a href="../../admin-cancel-trip.html">Cancel Trip</a></button>
-    <button class="dlt" type="submit" id="bookings"> View Bookings</button>
+    <button class="dlt" type="submit" id="bookings"><a href="../../bookings.html">View Bookings</a></button>
     <button class="dlt" type="submit" id="back"> <a href="../../../UI/view-all-trips.html"> Back</a></button>
 </div>
