--- a/UI/login.html
+++ b/UI/login.html
@@ -6,17 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Way Farer</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-
+    <link rel="stylesheet" href="./assets/css/nav.css">
     </head>
 
-<body>
+<body>   
      <div class="container">
-        <div class="header">
-                 
-            
-        </div>
       <div class="main">
-            <h2>Way Farer</h2>
+            <h2><a href="./landing-page.html">Way Farer</a></h2>
         <div class="form-instruction">
             <h3>Login to your account</h3> <br><br>
         </div>
