--- a/UI/reset-password.html
+++ b/UI/reset-password.html
@@ -9,11 +9,8 @@
     </head>
 <body>
     <div class="container">
-        <div class="header">
-
-        </div>
       <div class="main">
-            <h2>Way Farer</h2>
+            <h2><a href="./landing-page.html">Way Farer</a></h2>
         <div class="form-instruction">
             <h3>Forgot Password</h3> <br><br>
         </div>
