bug(images):display right image url [Starts #167398037]

--- a/UI/landing-page.html
+++ b/UI/landing-page.html
@@ -27,7 +27,7 @@
     </header>
     <section>
         <div class="container2" id="image">
-            <img src="./assets/Images/my-bus1.jpg" alt="Bus image" width="100%" height="100%">
+            <img src="./assets/images/my-bus1.jpg" alt="Bus image" width="100%" height="100%">
         </div>
         <div class="container4"> 
             <h1>Welcome to WayFarer Booking Services</h1> 
