bug(landing-page-containers):align containers correctly [Finishes #167401476]

--- a/UI/landing-page.html
+++ b/UI/landing-page.html
@@ -32,7 +32,7 @@
         <div class="container4"> 
             <h1>Welcome to WayFarer Booking Services</h1> 
             <p>Way Farer was established on 1st July 2019 with the sole aim of helping easen bus transportation across the East African countries. We have branch offices in all the capital cities of the East African countries; Kenya, Uganda, Tanzania, Rwanda, Djibouti and South Sudan.</p>
-            <p>Enjoy your trip around East Africa at the comfort you deserve.<br>In our commitment to giving our customers First Class services, all our trips come with free wifi, access to charging port, and a free drink. br<br></p><br>
+            <p>Enjoy your trip around East Africa at the comfort you deserve.<br>In our commitment to giving our customers First Class services, all our trips come with free wifi, access to charging port, and a free drink. <br></p><br>
         </div>
         <div class="booking">
             <h3>BOOK NOW</h3>
@@ -63,7 +63,7 @@
                 <option value="place">Juba</option>
                 <option value="place">Gitega</option>
             </select>
-           </div><br>
+           </div><br><br><br>
        <div class="form-group">
         <label for="date" class="control-label">Date:</label>
         <input type="date" name="date" class="form-control" placeholder="dd/mm/yy" id="date"> <br><br>
