--- a/UI/view-all-trips.html
+++ b/UI/view-all-trips.html
@@ -22,7 +22,7 @@
                 <div class="main-left">
                     <div class="user">
                         <div class="user-photo">
-                              <img src='./assets/Images/no image.png' alt='No image'></img>
+                              <img src='./assets/images/no image.png' alt='No image'></img>
                               <h3>User name</h3>
                          </div> <br>
                          <div class="nav">
